--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -9,4 +9,5 @@ header {
   align-items: center;
   background-color: darkorange;
   background-image: url("/images/asfalt-dark.png");
+  font-family: "Source sans pro", "Sans-serif";
 }
