--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -7,6 +7,10 @@
   font-family: "Source sans pro", "Sans-serif";
 }
 
+#tweets-container article:hover{
+  box-shadow: 5px 10px;
+}
+
 #tweets-container header {
   display: flex;
   justify-content: space-between;
@@ -25,6 +29,7 @@
 #tweets-container .content {
   margin-top: 20px;
   text-align: justify;
+  word-wrap: break-word;
 }
 
 #tweets-container footer {
