--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -30,9 +30,17 @@ nav button:hover i {
 }
 
 @keyframes bounceWrite {
-  0% {transform: translateY(0px);}
-  50% {transform: translateY(5px);}
-  100% {transform: translateY(0px);}
+  0% {
+    transform: translateY(0px);
+  }
+
+  50% {
+    transform: translateY(5px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 nav i {
