--- a/sass/tweets.scss
+++ b/sass/tweets.scss
@@ -1,10 +1,10 @@
+@use 'helpers';
+
 #tweets-container article {
   width: 100%;
   border: 1px solid black;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin: 30px 0;
   padding: 20px;
-  font-family: "Source sans pro", "Sans-serif";
 }
 
 #tweets-container article:hover {
@@ -12,14 +12,8 @@
 }
 
 #tweets-container header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#tweets-container header .user {
-  display: flex;
-  align-items: center;
+  @extend %flex-between;
+  align-items: flex-start;
 }
 
 #tweets-container img {
@@ -28,14 +22,13 @@
 
 #tweets-container .content {
   margin-top: 20px;
-  text-align: justify;
+  text-align: left;
   word-wrap: break-word;
 }
 
 #tweets-container footer {
+  @extend %flex-between;
   margin-top: 20px;
-  display: flex;
-  justify-content: space-between;
   border-top: 1px solid black;
 }
 
