Nest scss rules

--- a/public/styles/media.css
+++ b/public/styles/media.css
@@ -1,17 +1,33 @@
-/* Error: There is no module with the namespace "helper".
- *    ,
- * 19 |     @include helper.lowerElement;
- *    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- *    '
- *   sass/media.scss 19:5  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: There is no module with the namespace "helper".\a    \2577 \a 19 \2502      @include helper.lowerElement;\a    \2502      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   sass/media.scss 19:5  root stylesheet';
+@keyframes bounceJump {
+  50% {
+    transform: translateY(-5px);
+  }
+}
+@keyframes bounceNav {
+  50% {
+    transform: translateY(5px);
+  }
+}
+@media only screen and (min-width: 1024px) {
+  nav,
+nav button {
+    background-color: rgb(64, 86, 161);
+    color: #FFFFFF;
+  }
+  body > header {
+    position: relative;
+    top: 120px;
+    width: 28%;
+    max-width: 400px;
+    display: inline-flex;
+    margin: 60px 0 0 5%;
+  }
+  .container {
+    position: relative;
+    top: 120px;
+    width: 56%;
+    max-width: 700px;
+    float: right;
+    margin-top: 30px;
+  }
 }
