--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -17,7 +17,6 @@
   margin-top: 30px;
   font-weight: 600;
 }
-
 .new-tweet textarea {
   border: none;
   resize: none;
@@ -25,29 +24,24 @@
   background-color: inherit;
   border-bottom: 1px solid black;
 }
-
 .new-tweet textarea:focus-visible {
   outline-color: inherit;
   outline-style: auto;
   outline-width: 0;
 }
-
 .new-tweet footer {
   font-family: "Bungee", "Sans-serif";
 }
-
 .new-tweet button {
   background-color: #4056A1;
   color: #FFFFFF;
   border: none;
   font-size: 66%;
 }
-
 .new-tweet .red {
   color: red;
 }
-
-.error {
+.new-tweet .error {
   background-color: red;
   color: #FFFFFF;
   text-align: center;
