--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -9,22 +9,22 @@ nav {
   align-items: center;
   position: fixed;
   z-index: 1;
-}
 
-nav span {
-  font-family: "Bungee", "Sans-serif";
-}
+  span {
+    font-family: "Bungee", "Sans-serif";
+  }
 
-nav button {
-  @include helpers.back-fore-color(rgb(64, 86, 161, 0), #FFFFFF);
-  @extend %flex-center-col;
-  border-style: none;
-}
+  button {
+    @include helpers.back-fore-color(rgb(64, 86, 161, 0), #FFFFFF);
+    @extend %flex-center-col;
+    border-style: none;
+  }
 
-nav button:hover i {
-  @include helpers.bounceDeclaration('bounceNav');
-}
+  button:hover i {
+    @include helpers.bounceDeclaration('bounceNav');
+  }
 
-nav i {
-  color: #FF0000;
+  i {
+    color: #FF0000;
+  }
 }
