--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,4 +1,4 @@
-#tweets-container header, #tweets-container footer {
+#tweets-container article header, #tweets-container article footer {
   display: flex;
   justify-content: space-between;
 }
@@ -19,35 +19,29 @@
   margin: 30px 0;
   padding: 20px;
 }
-
-#tweets-container article:hover {
-  box-shadow: 5px 10px;
-}
-
-#tweets-container header {
+#tweets-container article header {
   align-items: flex-start;
 }
-
-#tweets-container img {
+#tweets-container article header img {
   height: 1em;
 }
-
-#tweets-container .content {
+#tweets-container article .content {
   margin-top: 20px;
   text-align: left;
   word-wrap: break-word;
 }
-
-#tweets-container footer {
+#tweets-container article footer {
   margin-top: 20px;
   border-top: 1px solid black;
 }
-
-#tweets-container .icons {
+#tweets-container article footer .icons {
   font-size: smaller;
   color: #4056A1;
 }
-
-#tweets-container .fa-solid:hover {
+#tweets-container article footer .icons .fa-solid:hover {
   color: #C19A35;
+}
+
+#tweets-container article:hover {
+  box-shadow: 5px 10px;
 }
