--- a/sass/header.scss
+++ b/sass/header.scss
@@ -7,8 +7,8 @@ body>header {
   width: 100%;
   background-color: darkorange;
   background-image: url("/images/asfalt-dark.png");
-}
 
-body>header img {
-  width: 185px;
+  img {
+    width: 185px;
+  }
 }
