--- a/sass/media.scss
+++ b/sass/media.scss
@@ -16,7 +16,7 @@
   }
 
   .container {
-    @include helper.lowerElement;
+    @include helpers.lowerElement;
     width: 56%;
     max-width: 700px;
     float: right;
