--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -3,38 +3,38 @@
 .new-tweet {
   margin-top: 30px;
   font-weight: 600;
-}
 
-.new-tweet textarea {
-  border: none;
-  resize: none;
-  width: 100%;
-  background-color: inherit;
-  border-bottom: 1px solid black;
-}
+  textarea {
+    border: none;
+    resize: none;
+    width: 100%;
+    background-color: inherit;
+    border-bottom: 1px solid black;
+  }
 
-.new-tweet textarea:focus-visible {
-  outline-color: inherit;
-  outline-style: auto;
-  outline-width: 0;
-}
+  textarea:focus-visible {
+    outline-color: inherit;
+    outline-style: auto;
+    outline-width: 0;
+  }
 
-.new-tweet footer {
-  @extend %flex-between;
-  font-family: "Bungee", "Sans-serif";
-}
+  footer {
+    @extend %flex-between;
+    font-family: "Bungee", "Sans-serif";
+  }
 
-.new-tweet button {
-  @include helpers.back-fore-color(#4056A1, #FFFFFF);
-  border: none;
-  font-size: 66%;
-}
+  button {
+    @include helpers.back-fore-color(#4056A1, #FFFFFF);
+    border: none;
+    font-size: 66%;
+  }
 
-.new-tweet .red {
-  color: red;
-}
+  .red {
+    color: red;
+  }
 
-.error {
-  @include helpers.back-fore-color(red, #FFFFFF);
-  text-align: center;
+  .error {
+    @include helpers.back-fore-color(red, #FFFFFF);
+    text-align: center;
+  }
 }
