--- a/sass/tweets.scss
+++ b/sass/tweets.scss
@@ -5,38 +5,38 @@
   border: 1px solid black;
   margin: 30px 0;
   padding: 20px;
+
+  header {
+    @extend %flex-between;
+    align-items: flex-start;
+
+    img {
+      height: 1em;
+    }
+  }
+
+  .content {
+    margin-top: 20px;
+    text-align: left;
+    word-wrap: break-word;
+  }
+
+  footer {
+    @extend %flex-between;
+    margin-top: 20px;
+    border-top: 1px solid black;
+
+    .icons {
+      font-size: smaller;
+      color: #4056A1;
+
+      .fa-solid:hover {
+        color: #C19A35;
+      }
+    }
+  }
 }
 
 #tweets-container article:hover {
   box-shadow: 5px 10px;
-}
-
-#tweets-container header {
-  @extend %flex-between;
-  align-items: flex-start;
-}
-
-#tweets-container img {
-  height: 1em;
-}
-
-#tweets-container .content {
-  margin-top: 20px;
-  text-align: left;
-  word-wrap: break-word;
-}
-
-#tweets-container footer {
-  @extend %flex-between;
-  margin-top: 20px;
-  border-top: 1px solid black;
-}
-
-#tweets-container .icons {
-  font-size: smaller;
-  color: #4056A1;
-}
-
-#tweets-container .fa-solid:hover {
-  color: #C19A35;
 }
