--- a/sass/tweets.scss
+++ b/sass/tweets.scss
@@ -26,13 +26,13 @@
     margin-top: 20px;
     border-top: 1px solid black;
 
-    .icons {
+    .fa-solid {
       font-size: smaller;
       color: #4056A1;
+    }
 
-      .fa-solid:hover {
-        color: #C19A35;
-      }
+    .fa-solid:hover {
+      color: #C19A35;
     }
   }
 }
