--- a/sass/jump.scss
+++ b/sass/jump.scss
@@ -13,6 +13,13 @@
   z-index: 1;
 }
 
+
 #jump:hover i {
   @include helpers.bounceDeclaration('bounceJump');
+}
+
+@keyframes bounceJump {
+  50% {
+    transform: translateY(-5px);
+  }
 }
